[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/textures/Puck.png" type="Texture" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Game.gd" type="Script" id=3]
[ext_resource path="res://scripts/Puck.gd" type="Script" id=4]
[ext_resource path="res://assets/textures/lights/light.png" type="Texture" id=5]
[ext_resource path="res://assets/audio/impactSoft_medium_004.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/audio/laser2.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/audio/confirmation_001.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/textures/CenterLine.png" type="Texture" id=9]
[ext_resource path="res://scenes/Wall2.tres" type="Shape2D" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512, 100 )

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( -80, 100, 80, 100, 80, -100, -80, -100 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 246, 280 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 50, 120 )

[sub_resource type="PhysicsMaterial" id=6]
friction = 0.05
bounce = 0.9

[sub_resource type="CircleShape2D" id=7]
radius = 30.0

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=9]
min_value = -360.0
max_value = 360.0
bake_resolution = 20
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 360 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=10]
bake_resolution = 20
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=11]
bake_resolution = 16
_data = [ Vector2( 0, 1 ), 0.0, -2.69829, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[node name="Table" type="Node2D"]
position = Vector2( 50, 1115 )
rotation = -1.5708
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [  ]
}

[node name="Background" type="Polygon2D" parent="."]
position = Vector2( 82.3613, 100.168 )
scale = Vector2( 1.17753, 1.35655 )
color = Color( 0.1, 0.1, 0.1, 1 )
offset = Vector2( -150, -150 )
polygon = PoolVector2Array( 0, 0, 1024, 0, 1024, 600, 0, 600 )

[node name="CenterLine" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.05 )
position = Vector2( 512, 300 )
texture = ExtResource( 9 )

[node name="Walls" type="Node2D" parent="."]

[node name="LeftWall" type="StaticBody2D" parent="Walls"]
position = Vector2( 512, -80 )
constant_linear_velocity = Vector2( 0, 100 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/LeftWall"]
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="Walls/LeftWall"]
color = Color( 0.5, 0.5, 0.5, 1 )
polygon = PoolVector2Array( -512, -100, -512, 100, 512, 100, 512, -100 )

[node name="RightWall" type="StaticBody2D" parent="Walls"]
position = Vector2( 512, 680 )
constant_linear_velocity = Vector2( 0, -100 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RightWall"]
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="Walls/RightWall"]
color = Color( 0.5, 0.5, 0.5, 1 )
polygon = PoolVector2Array( -512, -100, -512, 100, 512, 100, 512, -100 )

[node name="BlueWall1" type="StaticBody2D" parent="Walls"]
position = Vector2( -80, 100 )
rotation = 1.5708
constant_linear_velocity = Vector2( 100, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/BlueWall1"]
rotation = 0.00381814
shape = ExtResource( 10 )

[node name="Polygon2D" type="Polygon2D" parent="Walls/BlueWall1"]
color = Color( 0.501961, 0.74902, 1, 1 )
polygon = PoolVector2Array( -80, -100, -80, 100, 80, 100, 80, -100 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Walls/BlueWall1"]
occluder = SubResource( 3 )

[node name="BlueWall2" type="StaticBody2D" parent="Walls"]
position = Vector2( -80, 500 )
rotation = 1.5708
constant_linear_velocity = Vector2( 100, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/BlueWall2"]
shape = ExtResource( 10 )

[node name="Polygon2D" type="Polygon2D" parent="Walls/BlueWall2"]
color = Color( 0.501961, 0.74902, 1, 1 )
polygon = PoolVector2Array( -80, -100, -80, 100, 80, 100, 80, -100 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Walls/BlueWall2"]
occluder = SubResource( 3 )

[node name="BlueWall3" type="StaticBody2D" parent="Walls"]
position = Vector2( -100, -60 )
rotation = 1.5708
collision_layer = 2
collision_mask = 2
constant_linear_velocity = Vector2( 200, 200 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/BlueWall3"]
shape = ExtResource( 10 )

[node name="Polygon2D" type="Polygon2D" parent="Walls/BlueWall3"]
color = Color( 0.501961, 0.74902, 1, 1 )
polygon = PoolVector2Array( -80, -100, -80, 100, 80, 100, 80, -100 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Walls/BlueWall3"]
occluder = SubResource( 3 )

[node name="BlueWall4" type="StaticBody2D" parent="Walls"]
position = Vector2( -100, 660 )
rotation = 1.5708
collision_layer = 2
collision_mask = 2
constant_linear_velocity = Vector2( 200, -200 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/BlueWall4"]
shape = ExtResource( 10 )

[node name="Polygon2D" type="Polygon2D" parent="Walls/BlueWall4"]
color = Color( 0.501961, 0.74902, 1, 1 )
polygon = PoolVector2Array( -80, -100, -80, 100, 80, 100, 80, -100 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Walls/BlueWall4"]
occluder = SubResource( 3 )

[node name="RedWall1" type="StaticBody2D" parent="Walls"]
position = Vector2( 1104, 100 )
rotation = 1.5708
constant_linear_velocity = Vector2( -100, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RedWall1"]
shape = ExtResource( 10 )

[node name="Polygon2D" type="Polygon2D" parent="Walls/RedWall1"]
color = Color( 1, 0.501961, 0.501961, 1 )
polygon = PoolVector2Array( -80, -100, -80, 100, 80, 100, 80, -100 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Walls/RedWall1"]
occluder = SubResource( 3 )

[node name="RedWall2" type="StaticBody2D" parent="Walls"]
position = Vector2( 1104, 500 )
rotation = 1.5708
constant_linear_velocity = Vector2( -100, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RedWall2"]
shape = ExtResource( 10 )

[node name="Polygon2D" type="Polygon2D" parent="Walls/RedWall2"]
color = Color( 1, 0.5, 0.5, 1 )
polygon = PoolVector2Array( -80, -100, -80, 100, 80, 100, 80, -100 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Walls/RedWall2"]
occluder = SubResource( 3 )

[node name="RedWall3" type="StaticBody2D" parent="Walls"]
position = Vector2( 1124, -60 )
rotation = 1.5708
collision_layer = 2
collision_mask = 2
constant_linear_velocity = Vector2( -200, 200 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RedWall3"]
shape = ExtResource( 10 )

[node name="Polygon2D" type="Polygon2D" parent="Walls/RedWall3"]
color = Color( 1, 0.501961, 0.501961, 1 )
polygon = PoolVector2Array( -80, -100, -80, 100, 80, 100, 80, -100 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Walls/RedWall3"]
occluder = SubResource( 3 )

[node name="RedWall4" type="StaticBody2D" parent="Walls"]
position = Vector2( 1124, 660 )
rotation = 1.5708
collision_layer = 2
collision_mask = 2
constant_linear_velocity = Vector2( -200, -200 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RedWall4"]
shape = ExtResource( 10 )

[node name="Polygon2D" type="Polygon2D" parent="Walls/RedWall4"]
color = Color( 1, 0.5, 0.5, 1 )
polygon = PoolVector2Array( -80, -100, -80, 100, 80, 100, 80, -100 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Walls/RedWall4"]
occluder = SubResource( 3 )

[node name="PlayerBlock" type="Node2D" parent="."]
visible = false

[node name="P1Block" type="StaticBody2D" parent="PlayerBlock"]
position = Vector2( 758, 300 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBlock/P1Block"]
shape = SubResource( 4 )

[node name="P1Block2" type="StaticBody2D" parent="PlayerBlock"]
position = Vector2( -226, 300 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBlock/P1Block2"]
shape = SubResource( 4 )

[node name="P2Block" type="StaticBody2D" parent="PlayerBlock"]
position = Vector2( 266, 300 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBlock/P2Block"]
shape = SubResource( 4 )

[node name="P2Block2" type="StaticBody2D" parent="PlayerBlock"]
position = Vector2( 1250, 300 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBlock/P2Block2"]
shape = SubResource( 4 )

[node name="Goals" type="Node2D" parent="."]

[node name="BlueGoal" type="Area2D" parent="Goals"]
position = Vector2( -50, 300 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goals/BlueGoal"]
shape = SubResource( 5 )

[node name="RedGoal" type="Area2D" parent="Goals"]
position = Vector2( 1074, 300 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goals/RedGoal"]
shape = SubResource( 5 )

[node name="Lights" type="Node2D" parent="."]
visible = false

[node name="BlueLight" type="Light2D" parent="Lights"]
position = Vector2( -100, 300 )
texture = ExtResource( 5 )
color = Color( 0.25, 0.625, 1, 1 )
energy = 1.5
shadow_buffer_size = 1024

[node name="RedLight" type="Light2D" parent="Lights"]
position = Vector2( 1124, 300 )
texture = ExtResource( 5 )
color = Color( 1, 0.25, 0.25, 1 )
energy = 1.5
shadow_buffer_size = 1024

[node name="Puck" type="RigidBody2D" parent="."]
position = Vector2( 513, 300 )
physics_material_override = SubResource( 6 )
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
linear_damp = 0.5
script = ExtResource( 4 )

[node name="ImpactSound" type="AudioStreamPlayer" parent="Puck"]
stream = ExtResource( 6 )
volume_db = 20.0

[node name="PuckCollisionShape" type="CollisionShape2D" parent="Puck"]
shape = SubResource( 7 )

[node name="Light2D" type="Light2D" parent="Puck"]
texture = ExtResource( 5 )
offset = Vector2( 6.117, 3.145 )
texture_scale = 0.4
energy = 1.2
shadow_enabled = true
shadow_gradient_length = 1.5
shadow_filter = 3
shadow_filter_smooth = 16.0

[node name="PuckSprite" type="Sprite" parent="Puck"]
texture = ExtResource( 1 )

[node name="PuckVisibilityNotifier" type="VisibilityNotifier2D" parent="Puck"]

[node name="Red" parent="." instance=ExtResource( 2 )]
modulate = Color( 1, 0.34902, 0.34902, 1 )
position = Vector2( 924, 300 )
collision_layer = 5
collision_mask = 5

[node name="Blue" parent="." instance=ExtResource( 2 )]
modulate = Color( 0.34902, 0.67451, 1, 1 )
position = Vector2( 100, 300 )
collision_layer = 3
collision_mask = 3

[node name="Tween" type="Tween" parent="."]

[node name="BlueGoalParticles" type="CPUParticles2D" parent="."]
position = Vector2( -50, 300 )
emitting = false
amount = 128
lifetime = 1.5
one_shot = true
explosiveness = 0.75
texture = ExtResource( 1 )
gravity = Vector2( 0, 0 )
initial_velocity = 300.0
damping = 100.0
scale_amount = 0.1
scale_amount_curve = SubResource( 8 )
color = Color( 0.262745, 0.505882, 0.74902, 1 )

[node name="RedGoalParticles" type="CPUParticles2D" parent="."]
position = Vector2( 1074, 300 )
emitting = false
amount = 128
lifetime = 1.5
one_shot = true
explosiveness = 0.75
texture = ExtResource( 1 )
direction = Vector2( -1, 0 )
gravity = Vector2( 0, 0 )
initial_velocity = 300.0
damping = 100.0
scale_amount = 0.1
scale_amount_curve = SubResource( 8 )
color = Color( 0.75, 0.2625, 0.2625, 1 )

[node name="PuckTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 1.5
one_shot = true

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 10.0

[node name="SpawnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 10.0

[node name="PuckParticles" type="Node2D" parent="."]

[node name="PuckParticles1" type="CPUParticles2D" parent="PuckParticles"]
position = Vector2( 512, 300 )
emitting = false
amount = 64
lifetime = 0.4
one_shot = true
explosiveness = 0.5
randomness = 1.0
lifetime_randomness = 0.25
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 32.0
spread = 60.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
damping = 100.0
angle_random = 1.0
angle_curve = SubResource( 9 )
scale_amount = 0.1
scale_amount_curve = SubResource( 10 )
color = Color( 1, 1, 1, 0.5 )

[node name="PuckParticles2" type="CPUParticles2D" parent="PuckParticles"]
position = Vector2( 512, 300 )
emitting = false
amount = 64
lifetime = 0.4
one_shot = true
explosiveness = 0.5
randomness = 1.0
lifetime_randomness = 0.25
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 32.0
spread = 60.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
damping = 100.0
angle_random = 1.0
angle_curve = SubResource( 9 )
scale_amount = 0.1
scale_amount_curve = SubResource( 10 )
color = Color( 1, 1, 1, 0.5 )

[node name="PuckParticles3" type="CPUParticles2D" parent="PuckParticles"]
position = Vector2( 512, 300 )
emitting = false
amount = 64
lifetime = 0.4
one_shot = true
explosiveness = 0.5
randomness = 1.0
lifetime_randomness = 0.25
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 32.0
spread = 60.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
damping = 100.0
angle_random = 1.0
angle_curve = SubResource( 9 )
scale_amount = 0.1
scale_amount_curve = SubResource( 10 )
color = Color( 1, 1, 1, 0.5 )

[node name="PuckParticles4" type="CPUParticles2D" parent="PuckParticles"]
position = Vector2( 512, 300 )
emitting = false
amount = 64
lifetime = 0.4
one_shot = true
explosiveness = 0.5
randomness = 1.0
lifetime_randomness = 0.25
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 32.0
spread = 60.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
damping = 100.0
angle_random = 1.0
angle_curve = SubResource( 9 )
scale_amount = 0.1
scale_amount_curve = SubResource( 10 )
color = Color( 1, 1, 1, 0.5 )

[node name="PuckParticles5" type="CPUParticles2D" parent="PuckParticles"]
position = Vector2( 512, 300 )
emitting = false
amount = 64
lifetime = 0.4
one_shot = true
explosiveness = 0.5
randomness = 1.0
lifetime_randomness = 0.25
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 32.0
spread = 60.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
damping = 100.0
angle_random = 1.0
angle_curve = SubResource( 9 )
scale_amount = 0.1
scale_amount_curve = SubResource( 10 )
color = Color( 1, 1, 1, 0.5 )

[node name="PuckParticles6" type="CPUParticles2D" parent="PuckParticles"]
position = Vector2( 512, 300 )
emitting = false
amount = 64
lifetime = 0.4
one_shot = true
explosiveness = 0.5
randomness = 1.0
lifetime_randomness = 0.25
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 32.0
spread = 60.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
damping = 100.0
angle_random = 1.0
angle_curve = SubResource( 9 )
scale_amount = 0.1
scale_amount_curve = SubResource( 10 )
color = Color( 1, 1, 1, 0.5 )

[node name="PuckParticles7" type="CPUParticles2D" parent="PuckParticles"]
position = Vector2( 512, 300 )
emitting = false
amount = 64
lifetime = 0.4
one_shot = true
explosiveness = 0.5
randomness = 1.0
lifetime_randomness = 0.25
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 32.0
spread = 60.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
damping = 100.0
angle_random = 1.0
angle_curve = SubResource( 9 )
scale_amount = 0.1
scale_amount_curve = SubResource( 10 )
color = Color( 1, 1, 1, 0.5 )

[node name="PuckParticles8" type="CPUParticles2D" parent="PuckParticles"]
position = Vector2( 512, 300 )
emitting = false
amount = 64
lifetime = 0.4
one_shot = true
explosiveness = 0.5
randomness = 1.0
lifetime_randomness = 0.25
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 32.0
spread = 60.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
damping = 100.0
angle_random = 1.0
angle_curve = SubResource( 9 )
scale_amount = 0.1
scale_amount_curve = SubResource( 10 )
color = Color( 1, 1, 1, 0.5 )

[node name="PuckParticles9" type="CPUParticles2D" parent="PuckParticles"]
position = Vector2( 512, 300 )
emitting = false
amount = 64
lifetime = 0.4
one_shot = true
explosiveness = 0.5
randomness = 1.0
lifetime_randomness = 0.25
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 32.0
spread = 60.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
damping = 100.0
angle_random = 1.0
angle_curve = SubResource( 9 )
scale_amount = 0.1
scale_amount_curve = SubResource( 10 )
color = Color( 1, 1, 1, 0.5 )

[node name="PuckParticles10" type="CPUParticles2D" parent="PuckParticles"]
position = Vector2( 512, 300 )
emitting = false
amount = 64
lifetime = 0.4
one_shot = true
explosiveness = 0.5
randomness = 1.0
lifetime_randomness = 0.25
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 32.0
spread = 60.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
damping = 100.0
angle_random = 1.0
angle_curve = SubResource( 9 )
scale_amount = 0.1
scale_amount_curve = SubResource( 10 )
color = Color( 1, 1, 1, 0.5 )

[node name="PuckParticles11" type="CPUParticles2D" parent="PuckParticles"]
position = Vector2( 512, 300 )
emitting = false
amount = 64
lifetime = 0.4
one_shot = true
explosiveness = 0.5
randomness = 1.0
lifetime_randomness = 0.25
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 32.0
spread = 60.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
damping = 100.0
angle_random = 1.0
angle_curve = SubResource( 9 )
scale_amount = 0.1
scale_amount_curve = SubResource( 10 )
color = Color( 1, 1, 1, 0.5 )

[node name="PuckParticles12" type="CPUParticles2D" parent="PuckParticles"]
position = Vector2( 512, 300 )
emitting = false
amount = 64
lifetime = 0.4
one_shot = true
explosiveness = 0.5
randomness = 1.0
lifetime_randomness = 0.25
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 32.0
spread = 60.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
damping = 100.0
angle_random = 1.0
angle_curve = SubResource( 9 )
scale_amount = 0.1
scale_amount_curve = SubResource( 10 )
color = Color( 1, 1, 1, 0.5 )

[node name="PuckParticles13" type="CPUParticles2D" parent="PuckParticles"]
position = Vector2( 512, 300 )
emitting = false
amount = 64
lifetime = 0.4
one_shot = true
explosiveness = 0.5
randomness = 1.0
lifetime_randomness = 0.25
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 32.0
spread = 60.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
damping = 100.0
angle_random = 1.0
angle_curve = SubResource( 9 )
scale_amount = 0.1
scale_amount_curve = SubResource( 10 )
color = Color( 1, 1, 1, 0.5 )

[node name="PuckParticles14" type="CPUParticles2D" parent="PuckParticles"]
position = Vector2( 512, 300 )
emitting = false
amount = 64
lifetime = 0.4
one_shot = true
explosiveness = 0.5
randomness = 1.0
lifetime_randomness = 0.25
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 32.0
spread = 60.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
damping = 100.0
angle_random = 1.0
angle_curve = SubResource( 9 )
scale_amount = 0.1
scale_amount_curve = SubResource( 10 )
color = Color( 1, 1, 1, 0.5 )

[node name="PuckParticles15" type="CPUParticles2D" parent="PuckParticles"]
position = Vector2( 512, 300 )
emitting = false
amount = 64
lifetime = 0.4
one_shot = true
explosiveness = 0.5
randomness = 1.0
lifetime_randomness = 0.25
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 32.0
spread = 60.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
damping = 100.0
angle_random = 1.0
angle_curve = SubResource( 9 )
scale_amount = 0.1
scale_amount_curve = SubResource( 10 )
color = Color( 1, 1, 1, 0.5 )

[node name="PuckParticles16" type="CPUParticles2D" parent="PuckParticles"]
position = Vector2( 512, 300 )
emitting = false
amount = 64
lifetime = 0.4
one_shot = true
explosiveness = 0.5
randomness = 1.0
lifetime_randomness = 0.25
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 32.0
spread = 60.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
damping = 100.0
angle_random = 1.0
angle_curve = SubResource( 9 )
scale_amount = 0.1
scale_amount_curve = SubResource( 10 )
color = Color( 1, 1, 1, 0.5 )

[node name="PuckParticles17" type="CPUParticles2D" parent="PuckParticles"]
position = Vector2( 512, 300 )
emitting = false
amount = 64
lifetime = 0.4
one_shot = true
explosiveness = 0.5
randomness = 1.0
lifetime_randomness = 0.25
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 32.0
spread = 60.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
damping = 100.0
angle_random = 1.0
angle_curve = SubResource( 9 )
scale_amount = 0.1
scale_amount_curve = SubResource( 10 )
color = Color( 1, 1, 1, 0.5 )

[node name="PuckParticles18" type="CPUParticles2D" parent="PuckParticles"]
position = Vector2( 512, 300 )
emitting = false
amount = 64
lifetime = 0.4
one_shot = true
explosiveness = 0.5
randomness = 1.0
lifetime_randomness = 0.25
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 32.0
spread = 60.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
damping = 100.0
angle_random = 1.0
angle_curve = SubResource( 9 )
scale_amount = 0.1
scale_amount_curve = SubResource( 10 )
color = Color( 1, 1, 1, 0.5 )

[node name="PuckParticles19" type="CPUParticles2D" parent="PuckParticles"]
position = Vector2( 512, 300 )
emitting = false
amount = 64
lifetime = 0.4
one_shot = true
explosiveness = 0.5
randomness = 1.0
lifetime_randomness = 0.25
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 32.0
spread = 60.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
damping = 100.0
angle_random = 1.0
angle_curve = SubResource( 9 )
scale_amount = 0.1
scale_amount_curve = SubResource( 10 )
color = Color( 1, 1, 1, 0.5 )

[node name="PuckParticles20" type="CPUParticles2D" parent="PuckParticles"]
position = Vector2( 512, 300 )
emitting = false
amount = 64
lifetime = 0.4
one_shot = true
explosiveness = 0.5
randomness = 1.0
lifetime_randomness = 0.25
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 32.0
spread = 60.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
damping = 100.0
angle_random = 1.0
angle_curve = SubResource( 9 )
scale_amount = 0.1
scale_amount_curve = SubResource( 10 )
color = Color( 1, 1, 1, 0.5 )

[node name="PuckExplosionParticles" type="CPUParticles2D" parent="."]
position = Vector2( 513, 300 )
emitting = false
amount = 256
lifetime = 0.5
one_shot = true
explosiveness = 1.0
lifetime_randomness = 0.5
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 20.0
direction = Vector2( 0, 0 )
spread = 90.0
gravity = Vector2( 0, 0 )
initial_velocity = 300.0
initial_velocity_random = 0.5
damping = 100.0
damping_random = 0.25
scale_amount = 0.2
scale_amount_random = 0.15
scale_amount_curve = SubResource( 11 )

[connection signal="body_entered" from="Goals/BlueGoal" to="." method="_on_BlueGoal_body_entered"]
[connection signal="body_entered" from="Goals/RedGoal" to="." method="_on_RedGoal_body_entered"]
[connection signal="body_entered" from="Puck" to="Puck" method="_on_Puck_body_entered"]
[connection signal="screen_exited" from="Puck/PuckVisibilityNotifier" to="." method="_on_PuckVisibilityNotifier_screen_exited"]
[connection signal="tween_step" from="Tween" to="." method="_on_Tween_tween_step"]
[connection signal="timeout" from="PuckTimer" to="." method="_on_PuckTimer_timeout"]
